--- a/public/index.html
+++ b/public/index.html
@@ -227,19 +227,19 @@
                 class="fw-bold">Core </span>team<br />and their <span class="fw-bold">philosophy</span></h1>
             <div class="row mb-7 mb-lg-8 mb-xl-9 gap-3">
               <div class="col-12 col-lg">
-                <p class="text-black fs-10 fs-md-9 fs-xxl-8 lh-xl mb-0 line-clamp-5"> In Aranyak, we have a great team
+                <!-- <p class="text-black fs-10 fs-md-9 fs-xxl-8 lh-xl mb-0 line-clamp-5"> In Aranyak, we have a great team
                   to help you manage and maintain all your healthy plants simultaneously. We help you to change your
                   outlook on life with our huge collection of greenery. Refer to our collection of plants for indoor and
-                  outdoor vegetation and beautification.</p>
+                  outdoor vegetation and beautification.</p> -->
               </div>
               <div class="col-12 col-lg">
-                <p class="text-black fs-10 fs-md-9 fs-xxl-8 lh-xl mb-0 line-clamp-5"> Our wide variety of plants can
+                <!-- <p class="text-black fs-10 fs-md-9 fs-xxl-8 lh-xl mb-0 line-clamp-5"> Our wide variety of plants can
                   help you get stimulated to creative works and help you maintain your mental health while also
                   uplifting your way of life. Aranyak avails an efficient team of designers to help you plan your indoor
                   and outdoor beautification works in no time. Enjoy your journey with Aranyak!</p>
+              </div> -->
               </div>
-            </div>
-            <!-- <div class="d-flex flex-column flex-lg-row justify-content-center align-items-center mb-8 mb-lg-10"> <img
+              <!-- <div class="d-flex flex-column flex-lg-row justify-content-center align-items-center mb-8 mb-lg-10"> <img
                 class="img-fluid badhon" src="assets/img/team/badhon.png" alt="" />
               <div class="about-card">
                 <h1 class="fs-8 fs-md-7 fs-xxl-6 text-success fw-bold">Meet Badhon</h1>
@@ -252,7 +252,7 @@
                 </p>
               </div>
             </div> -->
-            <!-- <div>
+              <!-- <div>
               <p class="text-secondary text-capitalize fw-light mb-0 fs-5 fs-lg-4 text-center mb-7 mb-lg-8">
                 meet the <span class="fw-bold">team</span></p>
               <div class="row mb-13 w-lg-75 mb-lg-5 mx-auto gy-2 gy-lg-5 h-100">
@@ -304,7 +304,7 @@
                   <p class="fs-10 fs-md-9 fs-xxl-8 text-primary lh-xl mb-0 line-clamp-2">Everything's not great in life,
                     but we can still find beauty in it.</p>
                 </div> -->
-            <!-- <div class="col-12 col-md-6 col-lg-4 px-3 text-center mb-5 mb-lg-0">
+              <!-- <div class="col-12 col-md-6 col-lg-4 px-3 text-center mb-5 mb-lg-0">
                   <div class="position-relative w-75 w-md-100 mx-auto mb-2"><img class="w-100 team-hero-image"
                       src="assets/img/team/team/2.png" alt="" />
                     <div class="social-icons"><a href="#!"> <span class="uil uil-facebook"></span></a><a href="#!">
@@ -316,7 +316,7 @@
                   <p class="fs-10 fs-md-9 fs-xxl-8 text-primary lh-xl mb-0 line-clamp-2">That is when you can experience
                     true joy, when you have no fear.</p>
                 </div> -->
-            <!-- <div class="col-12 col-md-6 col-lg-4 px-3 text-center mb-5 mb-lg-0">
+              <!-- <div class="col-12 col-md-6 col-lg-4 px-3 text-center mb-5 mb-lg-0">
               <div class="position-relative w-75 w-md-100 mx-auto mb-2"><img class="w-100 team-hero-image"
                   src="assets/img/team/team/1.png" alt="" />
                 <div class="social-icons"><a href="#!"> <span class="uil uil-facebook"></span></a><a href="#!">
@@ -328,10 +328,10 @@
               <p class="fs-10 fs-md-9 fs-xxl-8 text-primary lh-xl mb-0 line-clamp-2">Let's make a nice big leafy
                 tree.</p>
             </div> -->
+            </div>
         </div>
-      </div>
-      </section>
-      <!-- <section class="mb-9 mb-lg-10 mb-xxl-11 text-center text-md-start" id="products">
+        </section>
+        <!-- <section class="mb-9 mb-lg-10 mb-xxl-11 text-center text-md-start" id="products">
         <h3 class="mb-x1 fs-8 fs-md-7 fs-xxl-6 text-success fw-bold pt-6">Our Products </h3>
         <div class="mb-6 mb-lg-7 mb-xl-10" id="slider-1">
           <h1 class="fs-5 fs-md-3 fs-xxl-2 text-secondary text-capitalize fw-light mb-13 mb-lg-7"> <span
@@ -633,7 +633,7 @@
               class="uil uil-arrow-right"></span></button>
         </div>
       </section> -->
-      <!-- <section class="mb-9 mb-lg-10 mb-xxl-11" id="review">
+        <!-- <section class="mb-9 mb-lg-10 mb-xxl-11" id="review">
         <h3 class="mb-3 pt-6 fs-8 fs-md-7 fs-xxl-6 text-success fw-bold text-center text-lg-start text-capitalize">
           review </h3>
         <h1
@@ -688,7 +688,7 @@
               src="assets/img/illustrations/loveletter.png" alt="" /></div>
         </div>
       </section> -->
-      <!-- <section class="mb-9 mb-lg-10 mb-xxl-11" id="blogs">
+        <!-- <section class="mb-9 mb-lg-10 mb-xxl-11" id="blogs">
         <div class="row mb-6 mb-lg-7 mb-xl-10 pt-6">
           <h3 class="mb-3 fs-8 fs-md-7 fs-xxl-6 text-success fw-bold text-center text-lg-start text-capitalize">
             aryanak blog </h3>
@@ -760,7 +760,7 @@
               class="uil uil-arrow-right"></span></button>
         </div>
       </section> -->
-      <!-- <section class="mb-9 mb-lg-10 mb-xxl-11 text-center text-lg-start mt-1" id="support">
+        <!-- <section class="mb-9 mb-lg-10 mb-xxl-11 text-center text-lg-start mt-1" id="support">
         <div class="row g-4 g-lg-6 g-xl-7 pt-6">
           <div class="d-none d-lg-block col-lg-6 text-center"><img class="img-fluid"
               src="assets/img/illustrations/women_watering.png" alt="" /></div>
@@ -781,56 +781,56 @@
           </div>
         </div>
       </section> -->
-    </div>
-    <button class="btn scroll-to-top" data-scroll-top="data-scroll-top"><span
-        class="uil uil-angle-up text-white"></span></button>
-    <footer class="Footer" style="background-image: url('assets/img/illustrations/BOTTOM.png')">
-      <div class="pb-x1 px-3 px-lg-0">
-        <div class="container">
-          <div class="row align-items-end g-4 g-sm-6">
-            <!-- <div class="col-6 col-md-4">
+      </div>
+      <button class="btn scroll-to-top" data-scroll-top="data-scroll-top"><span
+          class="uil uil-angle-up text-white"></span></button>
+      <footer class="Footer" style="background-image: url('assets/img/illustrations/BOTTOM.png')">
+        <div class="pb-x1 px-3 px-lg-0">
+          <div class="container">
+            <div class="row align-items-end g-4 g-sm-6">
+              <!-- <div class="col-6 col-md-4">
               <div class="mb-6 mb-md-8"><a class="cursor-pointer" href=""><img class="img-fluid"
                     src="assets/img/logos/Footer_logo.png" alt="" /></a></div>
               
             </div> -->
-            <div class="col-6 col-md-4">
-              <div class="mb-3 mb-md-5">
-                <!-- <h3 class="fs-9 fs-md-8 fw-bold mb-0" style="color: #FFF0D3;">User Account</h3> -->
-              </div>
-
-            </div>
-            <div class="col-12 col-md-4">
-              <div class="row g-4 g-sm-6 g-md-0">
-                <div class="col-6 col-md-12 mb-md-7">
-                  <h3 class="fs-9 fs-md-8 fw-bold mb-3" style="color: #FFF0D3;">Follow Us At</h3>
-                  <div class="d-flex align-items-center"> <a class="social-icon me-2" href="#!"><span
-                        class="uil uil-facebook fs-8"></span></a><a class="social-icon me-2" href="#!"><span
-                        class="uil uil-linkedin fs-8"></span></a><a class="social-icon me-2" href="#!"><span
-                        class="uil uil-youtube fs-8"></span></a><a class="social-icon" href="#!"><span
-                        class="uil uil-twitter fs-8"></span></a></div>
+              <div class="col-6 col-md-4">
+                <div class="mb-3 mb-md-5">
+                  <!-- <h3 class="fs-9 fs-md-8 fw-bold mb-0" style="color: #FFF0D3;">User Account</h3> -->
                 </div>
-                <div class="col-6 col-md-12">
-                  <div class="mb-3">
-                    <p class="fs-9 fs-md-8 fw-bold lh-nomal mb-0" style="color: #FFF0D3;"> Contact </p>
+
+              </div>
+              <div class="col-12 col-md-4">
+                <div class="row g-4 g-sm-6 g-md-0">
+                  <div class="col-6 col-md-12 mb-md-7">
+                    <h3 class="fs-9 fs-md-8 fw-bold mb-3" style="color: #FFF0D3;">Follow Us At</h3>
+                    <div class="d-flex align-items-center"> <a class="social-icon me-2" href="#!"><span
+                          class="uil uil-facebook fs-8"></span></a><a class="social-icon me-2" href="#!"><span
+                          class="uil uil-linkedin fs-8"></span></a><a class="social-icon me-2" href="#!"><span
+                          class="uil uil-youtube fs-8"></span></a><a class="social-icon" href="#!"><span
+                          class="uil uil-twitter fs-8"></span></a></div>
                   </div>
-                  <div class="fs-10 fs-md-9">
-                    <p class="mb-0 text-white opacity-70"> Obito Uchiha</p>
-                    <p class="mb-0 text-white opacity-70"> Konoha, Leaf Village</p>
+                  <div class="col-6 col-md-12">
+                    <div class="mb-3">
+                      <p class="fs-9 fs-md-8 fw-bold lh-nomal mb-0" style="color: #FFF0D3;"> Contact </p>
+                    </div>
+                    <div class="fs-10 fs-md-9">
+                      <p class="mb-0 text-white opacity-70"> Obito Uchiha</p>
+                      <p class="mb-0 text-white opacity-70"> Konoha, Leaf Village</p>
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
-      <div class="bg-success py-2 py-md-3 position-relative terms-condition">
-        <div class="overley-background"></div>
-        <div class="container py-12 text-div text-md-end"><a class="links ms-md-4" href="#!" title="F.A.Q"> F.A.Q
-          </a><a class="links ms-3 ms-md-4" href="#!" title="Cookies Policy"> Cookies Policy</a><a
-            class="links ms-3 ms-md-4" href="#!" title="Legal Terms"> Legal Terms </a><a class="links ms-3 ms-md-4"
-            href="#!" title="Privacy Policy"> Privacy Policy</a></div>
-      </div>
-    </footer>
+        <div class="bg-success py-2 py-md-3 position-relative terms-condition">
+          <div class="overley-background"></div>
+          <div class="container py-12 text-div text-md-end"><a class="links ms-md-4" href="#!" title="F.A.Q"> F.A.Q
+            </a><a class="links ms-3 ms-md-4" href="#!" title="Cookies Policy"> Cookies Policy</a><a
+              class="links ms-3 ms-md-4" href="#!" title="Legal Terms"> Legal Terms </a><a class="links ms-3 ms-md-4"
+              href="#!" title="Privacy Policy"> Privacy Policy</a></div>
+        </div>
+      </footer>
     </div>
     </div>
   </main>
