--- a/public/index.html
+++ b/public/index.html
@@ -97,7 +97,7 @@
             <div class="col-12 col-lg-6 order-1 order-lg-0">
               <h1 class="fs-5 fs-md-3 fs-xxl-2 text-secondary text-capitalize fw-light mb-4">Welcome<br
                   class="d-none d-md-block d-lg-none" /><span class="fw-bold">To</span><br
-                  class="d-none d-xl-block d-xxl-none" /><br class="d-sm-none" />Ninja Happines</h1>
+                  class="d-none d-xl-block d-xxl-none" /><br class="d-sm-none" />Happniness Ninja</h1>
               <p class="fs-8 fs-md-11 fs-xxl-7 text-primary mb-5 mb-lg-6 mb-xl-7 fw-light">
                 Our professionals possess in-depth knowledge
                 about your industry. This expertise enables us to
@@ -108,7 +108,7 @@
                   class="uil uil-arrow-right"></span></button> -->
             </div>
             <div class="col-12 col-lg-6 order-0 order-lg-1"><img class="img-fluid w-50 w-lg-100"
-                src="assets/img/Hero/H1c.jpg" alt="" /></div>
+                src="assets/img/Hero/H1.jpg" alt="" /></div>
           </div>
           <section class="mb-9 mb-lg-10 mb-xxl-11 text-center text-lg-start mt-9" id="home">
             <div>
