--- a/public/index.html
+++ b/public/index.html
@@ -108,7 +108,7 @@
                   class="uil uil-arrow-right"></span></button> -->
             </div>
             <div class="col-12 col-lg-6 order-0 order-lg-1"><img class="img-fluid w-50 w-lg-100"
-                src="assets/img/Hero/H1.jpg" alt="" /></div>
+                src="assets/img/Hero/Hh3.jpg" alt="" /></div>
           </div>
           <section class="mb-9 mb-lg-10 mb-xxl-11 text-center text-lg-start mt-9" id="home">
             <div>
