--- a/public/index.html
+++ b/public/index.html
@@ -111,8 +111,9 @@
               <!-- <button class="btn btn-gradient fs-8 d-inline-flex"><span>explore catalog</span><span
                   class="uil uil-arrow-right"></span></button> -->
             </div>
-            <div class="col-12 col-lg-6 order-0 order-lg-1"><img class="img-fluid w-50 w-lg-100"
-                src="assets/img/Hero/Hh3.jpg" alt="" /></div>
+            <div class="col-12 col-lg-6 order-0 order-lg-1 d-flex justify-content-center align-items-center">
+              <img class="img-fluid w-80 w-lg-100" src="assets/img/Hero/Hh3.jpg" alt="" />
+            </div>
           </div>
           <br>
           <section class="mb-9 mb-lg-10 mb-xxl-11 text-center text-lg-start mt-9" id="home">
@@ -792,35 +793,25 @@
       <footer class="Footer" style="background-image: url('assets/img/illustrations/BOTTOM.png')">
         <div class="pb-x1 px-3 px-lg-0">
           <div class="container">
-            <div class="row align-items-end g-4 g-sm-6">
-              <!-- <div class="col-6 col-md-4">
-              <div class="mb-6 mb-md-8"><a class="cursor-pointer" href=""><img class="img-fluid"
-                    src="assets/img/logos/Footer_logo.png" alt="" /></a></div>
-              
-            </div> -->
-              <div class="col-6 col-md-4">
-                <div class="mb-3 mb-md-5">
-                  <!-- <h3 class="fs-9 fs-md-8 fw-bold mb-0" style="color: #FFF0D3;">User Account</h3> -->
-                </div>
-
-              </div>
+            <div class="row align-items-end g-4 g-sm-6 justify-content-start">
               <div class="col-12 col-md-4">
                 <div class="row g-4 g-sm-6 g-md-0">
                   <div class="col-6 col-md-12 mb-md-7">
                     <h3 class="fs-9 fs-md-8 fw-bold mb-3" style="color: #FFF0D3;">Follow Us At</h3>
-                    <div class="d-flex align-items-center"> <a class="social-icon me-2" href="#!"><span
-                          class="uil uil-facebook fs-8"></span></a><a class="social-icon me-2" href="#!"><span
-                          class="uil uil-linkedin fs-8"></span></a><a class="social-icon me-2" href="#!"><span
-                          class="uil uil-youtube fs-8"></span></a><a class="social-icon" href="#!"><span
-                          class="uil uil-twitter fs-8"></span></a></div>
+                    <div class="d-flex align-items-center justify-content-start">
+                      <a class="social-icon me-2" href="#!"><span class="uil uil-facebook fs-8"></span></a>
+                      <a class="social-icon me-2" href="#!"><span class="uil uil-linkedin fs-8"></span></a>
+                      <a class="social-icon me-2" href="#!"><span class="uil uil-youtube fs-8"></span></a>
+                      <a class="social-icon" href="#!"><span class="uil uil-twitter fs-8"></span></a>
+                    </div>
                   </div>
                   <div class="col-6 col-md-12">
                     <div class="mb-3">
-                      <p class="fs-9 fs-md-8 fw-bold lh-nomal mb-0" style="color: #FFF0D3;"> Contact </p>
+                      <p class="fs-9 fs-md-8 fw-bold lh-nomal mb-0" style="color: #FFF0D3;">Contact</p>
                     </div>
                     <div class="fs-10 fs-md-9">
-                      <p class="mb-0 text-white opacity-70"> Obito Uchiha</p>
-                      <p class="mb-0 text-white opacity-70"> Konoha, Leaf Village</p>
+                      <p class="mb-0 text-white opacity-70">Obito Uchiha</p>
+                      <p class="mb-0 text-white opacity-70">Konoha, Leaf Village</p>
                     </div>
                   </div>
                 </div>
