--- a/public/index.html
+++ b/public/index.html
@@ -200,7 +200,8 @@
 
               <div class="get-in-touch-form" id="contact">
                 <h2>Get in Touch</h2>
-                <form>
+                <form action="https://api.web3forms.com/submit" method="POST">
+                  <input type="hidden" name="access_key" value="d60a797c-6e3c-4c69-ac2b-1aee7596c5e9">
                   <div class="form-group">
                     <label for="name">Name</label>
                     <input type="text" id="name" name="name" required>
