--- a/public/index.html
+++ b/public/index.html
@@ -206,6 +206,10 @@
                     <label for="name">Name</label>
                     <input type="text" id="name" name="name" required>
                   </div>
+                  <!-- <div class="form-group">
+                      <label for="number">Number</label>
+                  <input type="number" id="number" name="number" required>
+                  </div> -->
                   <div class="form-group">
                     <label for="email">Email</label>
                     <input type="email" id="email" name="email" required>
@@ -266,9 +270,13 @@
                         <p class="fs-9 fs-md-8 fw-bold lh-nomal mb-0" style="color: #FFF0D3;">Contact</p>
                       </div>
                       <div class="fs-10 fs-md-9">
-                        <p class="mb-0 text-white opacity-70">Email: hello@happinessninja.in</p>
-                        <p class="mb-0 text-white opacity-70" herf="tel:+917201901427">Contat Us: +917201901427</p>
-                        <p class="mb-0 text-white opacity-70">A/1116,11th FLOOR,SUN WEST BANK, ASHRAM ROAD, 380015</p>
+                        <!-- <p class="mb-0 text-white opacity-70">Email: hello@happinessninja.in</p> -->
+                        <a href="mailto:hello@happinessninja.in" style="color: white;">Email:
+                          hello@happinessninja.in</a><br>
+                        <a href="tel:+917201901427" style="color: white;">Contact:
+                          +917201901427</a>
+                        <p class="mb-0 text-white opacity-70" style="color: white;">A/1116,11th FLOOR,SUN WEST BANK,
+                          ASHRAM ROAD, 380015</p>
                         <p class="mb-0 text-white opacity-70"></p>
                       </div>
                     </div>
