--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,7 @@
   <link href="assets/css/user-rtl.css" rel="stylesheet" id="user-style-rtl">
   <link href="assets/css/user.css" rel="stylesheet" id="user-style-default">
   <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="assets/css/Get.css">
   <!-- <link rel="stylesheet" href="assets/css/navbar.css"> -->
 </head>
@@ -91,6 +92,7 @@
             </div>
           </div>
         </nav>
+        <!-- <h1></h1> -->
         <br>
         <div class="container" data-bs-target="#navbar-top" data-bs-spy="scroll" tabindex="0">
           <div class="row g-4 g-lg-6 g-xl-7 align-items-center" id="home">
@@ -260,6 +262,7 @@
                       <h3 class="fs-9 fs-md-8 fw-bold mb-3" style="color: #FFF0D3;">Follow Us At</h3>
                       <div class="d-flex align-items-center justify-content-start">
                         <a class="social-icon me-2" href="#!"><span class="uil uil-facebook fs-8"></span></a>
+                        <a class="social-icon me-2" href="#!"><span class="uil uil-instagram fs-8"></span></a>
                         <a class="social-icon me-2" href="#!"><span class="uil uil-linkedin fs-8"></span></a>
                         <a class="social-icon me-2" href="#!"><span class="uil uil-youtube fs-8"></span></a>
                         <a class="social-icon" href="#!"><span class="uil uil-twitter fs-8"></span></a>
@@ -287,10 +290,10 @@
           </div>
           <div class="bg-success py-2 py-md-3 position-relative terms-condition">
             <div class="overley-background"></div>
-            <div class="container py-12 text-div text-md-end"><a class="links ms-md-4" href="#!" title="F.A.Q"> F.A.Q
-              </a><a class="links ms-3 ms-md-4" href="#!" title="Cookies Policy"> Cookies Policy</a><a
-                class="links ms-3 ms-md-4" href="#!" title="Legal Terms"> Legal Terms </a><a class="links ms-3 ms-md-4"
-                href="#!" title="Privacy Policy"> Privacy Policy</a></div>
+            <div class="container py-12 text-div text-md-end"><a class="links ms-md-4" href="#!" title="F.A.Q">
+              </a><a class="links ms-3 ms-md-4" href="#!" title="Cookies Policy"> copyright © 2024</a><a
+                class="links ms-3 ms-md-4" href="#!" title="Legal Terms"> All Rights reserved </a><a
+                class="links ms-3 ms-md-4" href="#!" title="Privacy Policy"> </a></div>
           </div>
         </footer>
       </div>
