--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,8 @@
   <!-- ===============================================-->
   <main class="main" id="top">
     <div class="bg-white">
-      <div class="content">
+      <h1>404 Page Not Found</h1>
+      <!-- <div class="content">
         <div class="bg-white p-1 p-lg-2">
           <div class="d-flex justify-content-end align-items-center">
             <a class="ms-2 ms-md-3 submenu" href="tel:+917201901427">Contact Us</a>
@@ -91,12 +92,13 @@
               </div>
             </div>
           </div>
-        </nav>
-        <!-- <h1></h1> -->
-        <br>
+        </nav> -->
+      <!-- nav tk h -->
+      <!-- <h1></h1> -->
+      <!-- <br>
         <div class="container" data-bs-target="#navbar-top" data-bs-spy="scroll" tabindex="0">
-          <div class="row g-4 g-lg-6 g-xl-7 align-items-center" id="home">
-            <!-- <div class="col-12 col-lg-6 order-1 order-lg-0">
+          <div class="row g-4 g-lg-6 g-xl-7 align-items-center" id="home"> -->
+      <!-- <div class="col-12 col-lg-6 order-1 order-lg-0">
               <h1 class="fs-5 fs-md-3 fs-xxl-2 text-secondary text-capitalize fw-light mb-4">Welcome<br
                   class="d-none d-md-block d-lg-none" /><span class="fw-bold"> To</span><br
                   class="d-none d-xl-block d-xxl-none" /><br class="d-sm-none" />Happniness Ninja</h1>
@@ -111,9 +113,9 @@
             <div class="col-12 col-lg-6 order-0 order-lg-1 d-flex justify-content-center align-items-center">
               <img class="img-fluid w-80 w-lg-100" src="assets/img/Hero/Hh3.jpg" alt="" />
             </div> -->
-          </div>
+      <!-- </div> -->
 
-          <section class="mb-9 mb-lg-10 mb-xxl-11 text-center text-lg-start mt-9" id="home">
+      <!-- <section class="mb-9 mb-lg-10 mb-xxl-11 text-center text-lg-start mt-9" id="home">
             <div>
               <div class="row g-4 g-lg-6 g-xl-7 mb-6 mb-lg-7 mb-xl-10 align-items-center">
                 <div class="col-12 col-lg-6"><img class="img-fluid w-50 w-lg-100" src="assets/img/Hero/H12.jpg"
@@ -132,10 +134,10 @@
                     thriving and vibrant entity, ready to
                     conquer the challenges of the modern
                     world
-                  </p>
-                  <!-- <button class="btn btn-gradient fs-8 mt-1 d-inline-flex"><span>explore catalog</span><span -->
-                  <!-- class="uil uil-arrow-right"></span></button> -->
-                </div>
+                  </p> -->
+      <!-- <button class="btn btn-gradient fs-8 mt-1 d-inline-flex"><span>explore catalog</span><span -->
+      <!-- class="uil uil-arrow-right"></span></button> -->
+      <!-- </div>
               </div>
               <div class="row g-4 g-lg-6 g-xl-7 align-items-center" id="Expertise">
                 <div class="col-12 col-lg-6 order-1 order-lg-0">
@@ -147,10 +149,10 @@
                     about your industry. This expertise enables us to
                     better understand your unique requirements and
                     deliver tailored solutions.
-                  </p>
-                  <!-- <button class="btn btn-gradient fs-8 d-inline-flex"><span>explore catalog</span><span
+                  </p> -->
+      <!-- <button class="btn btn-gradient fs-8 d-inline-flex"><span>explore catalog</span><span
                       class="uil uil-arrow-right"></span></button> -->
-                </div>
+      <!-- </div>
                 <div class="col-12 col-lg-6 order-0 order-lg-1"><img class="img-fluid w-50 w-lg-100"
                     src="assets/img/Hero/H13.jpg" alt="" /></div>
               </div>
@@ -170,10 +172,10 @@
                     <br>
                     HR Software
                     's
-                  </p>
-                  <!-- <button class="btn btn-gradient fs-8 mt-1 d-inline-flex"><span>explore catalog</span><span -->
-                  <!-- class="uil uil-arrow-right"></span></button> -->
-                </div>
+                  </p> -->
+      <!-- <button class="btn btn-gradient fs-8 mt-1 d-inline-flex"><span>explore catalog</span><span -->
+      <!-- class="uil uil-arrow-right"></span></button> -->
+      <!-- </div>
               </div>
               <div class="row g-4 g-lg-6 g-xl-7 align-items-center" id="more">
                 <div class="col-12 col-lg-6 order-1 order-lg-0">
@@ -192,10 +194,10 @@
                     allowing you to focus on the growth
                     and development of your supported
                     departments.
-                  </p>
-                  <!-- <button class="btn btn-gradient fs-8 d-inline-flex"><span>explore catalog</span><span
+                  </p> -->
+      <!-- <button class="btn btn-gradient fs-8 d-inline-flex"><span>explore catalog</span><span
                       class="uil uil-arrow-right"></span></button> -->
-                </div>
+      <!-- </div>
                 <div class="col-12 col-lg-6 order-0 order-lg-1"><img class="img-fluid w-50 w-lg-100"
                     src="assets/img/Hero/H51.jpg" alt="" /></div>
               </div>
@@ -207,12 +209,12 @@
                   <div class="form-group">
                     <label for="name">Name</label>
                     <input type="text" id="name" name="name" required>
-                  </div>
-                  <!-- <div class="form-group">
+                  </div> -->
+      <!-- <div class="form-group">
                       <label for="number">Number</label>
                   <input type="number" id="number" name="number" required>
                   </div> -->
-                  <div class="form-group">
+      <!-- <div class="form-group">
                     <label for="email">Email</label>
                     <input type="email" id="email" name="email" required>
                   </div>
@@ -224,32 +226,32 @@
                 </form>
               </div>
 
-          </section>
+          </section> -->
 
-          <!-- <section class="mb-9 mb-lg-10 mb-xxl-11 text-center text-lg-start" id="about">
+      <!-- <section class="mb-9 mb-lg-10 mb-xxl-11 text-center text-lg-start" id="about">
           <h4 class="mb-x1 fs-8 fs-md-7 fs-xxl-6 text-success fw-bold pt-6 text-capitalize">About us </h4>
             <h1 class="fs-5 fs-lg-3 fs-xl-2 text-secondary text-capitalize fw-light mb-x1">our <span
                 class="fw-bold">Core </span>team<br />and their <span class="fw-bold">philosophy</span></h1>
             <div class="row mb-7 mb-lg-8 mb-xl-9 gap-3">
               <div class="col-12 col-lg">   -->
-          <!-- <p class="text-black fs-10 fs-md-9 fs-xxl-8 lh-xl mb-0 line-clamp-5"> In Aranyak, we have a great team
+      <!-- <p class="text-black fs-10 fs-md-9 fs-xxl-8 lh-xl mb-0 line-clamp-5"> In Aranyak, we have a great team
                   to help you manage and maintain all your healthy plants simultaneously. We help you to change your
                   outlook on life with our huge collection of greenery. Refer to our collection of plants for indoor and
                   outdoor vegetation and beautification.</p> -->
-          <!-- </div>
+      <!-- </div>
               <div class="col-12 col-lg"> -->
-          <!-- <p class="text-black fs-10 fs-md-9 fs-xxl-8 lh-xl mb-0 line-clamp-5"> Our wide variety of plants can
+      <!-- <p class="text-black fs-10 fs-md-9 fs-xxl-8 lh-xl mb-0 line-clamp-5"> Our wide variety of plants can
                   help you get stimulated to creative works and help you maintain your mental health while also
                   uplifting your way of life. Aranyak avails an efficient team of designers to help you plan your indoor
                   and outdoor beautification works in no time. Enjoy your journey with Aranyak!</p>
               </div> -->
-          <!-- </div>
+      <!-- </div>
 
             </div>
         </div>
         </section> -->
 
-        </div>
+      <!-- </div>
         <button class="btn scroll-to-top" data-scroll-top="data-scroll-top"><span
             class="uil uil-angle-up text-white"></span></button>
         <footer class="Footer" style="background-image: url('assets/img/illustrations/BOTTOM.png')">
@@ -273,7 +275,7 @@
                         <p class="fs-9 fs-md-8 fw-bold lh-nomal mb-0" style="color: #FFF0D3;">Contact</p>
                       </div>
                       <div class="fs-10 fs-md-9">
-                        <!-- <p class="mb-0 text-white opacity-70">Email: hello@happinessninja.in</p> -->
+      
                         <a href="mailto:hello@happinessninja.in" style="color: white;">Email:
                           hello@happinessninja.in</a><br>
                         <a href="tel:+917201901427" style="color: white;">Contact:
@@ -297,7 +299,7 @@
           </div>
         </footer>
       </div>
-    </div>
+    </div> -->
   </main>
   <!-- ===============================================-->
   <!--    End of Main Content-->
